--- a/config/install/field.storage.user.user_bio.yml
+++ b/config/install/field.storage.user.user_bio.yml
@@ -3,13 +3,11 @@ status: true
 dependencies:
   module:
     - user
-id: user.field_user_last_name
-field_name: field_user_last_name
+id: user.user_bio
+field_name: user_bio
 entity_type: user
-type: string
+type: string_long
 settings:
-  max_length: 255
-  is_ascii: false
   case_sensitive: false
 module: core
 locked: false
